[package]
name = "cbordata"
version = "0.6.0"
description = "CBOR processing package for document databases and distributed applications"
repository = "https://github.com/bnclabs/cbordata"
documentation = "https://docs.rs/cbordata"
keywords = ["CBOR", "cbor"]
categories = ["parsing", "encoding"]
authors = ["prataprc <prataprc@gmail.com>"]
readme = "README.md"
license = "MIT"

[profile.release]
debug = true

[profile.bench]
debug = true

[lib]
name = "cbordata"

[dependencies]
cbordata-derive = { path = "cbordata-derive", version = "=0.6.0"}
num-bigint = { version = "0.4.2", features = ["arbitrary"] }
num-traits = "0.2.14"

arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
quickcheck = "0.7"
rand = { version = "0.8.4", features = ["std_rng"] }
arbitrary = { version = "1", features = ["derive"] }

[[example]]
name = "macro"
crate-type = ["bin"]

[[example]]
name = "arc"
crate-type = ["bin"]

[badges]
maintenance = { status = "actively-developed" }
